2008-11-18  John Sullivan  <sullivan@apple.com>

        Yet more Mac build fixing

        * WebCore.base.exp: Export __ZTVN7WebCore17FrameLoaderClientE

2008-11-18  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon Hausmann.

        React properly to frame rect changes for QWidget based plugins

        We now set the geometry of the QWidget in frameRectsChanged,
        intead of setFrameRect, which means we pick up the changes to
        the frame rect when scrolling. We also set a mask on the
        widget to keep it from painting over scrollbars and the like

        * platform/qt/WidgetQt.cpp:
        (WebCore::Widget::setFrameRect):

2008-11-18  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Rubber-stamped by Simon Hausmann.

        Don't mark scrollbars as focused in QtWebKit

        When initing from the widget we also got the focus state,
        but this does not make sense for scrollbars.

        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::styleOptionSlider):

2008-11-18  Alexey Proskuryakov  <ap@webkit.org>

        More Mac build fixing.

        * WebCore.base.exp: Export FrameLoaderClient destructor.

2008-11-18  Alexey Proskuryakov  <ap@webkit.org>

        Mac build fix.

        * WebCore.xcodeproj/project.pbxproj: Add FrameLoaderClient.cpp for now.

2008-11-18  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=22056

        Attempt to share transitionToCommittedForNewPage of FrameLoaderClient with the different ports

        After Hyatt's work on Widget and ScrollView there is little difference
        between the implementation of Qt, Gtk+ and Win. In fact any kind of
        difference is mostly a bug. Alp has fixed two of such errors for the Gtk+
        port and the Qt port has at least one of them left.

        The only difference between the implementations is in getting the the